# MOBA-proto

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
assets/: uv_test.tga
cmake/: CompileShaders.cmake  CompilerWarnings.cmake  EngineOptions.cmake
docs/: ARCHITECTURE.md  JOURNAL.md  ROADMAP.md
docs/DECISIONS/: 0001-tick-rate.md  0002-fixed-point-sim-math.md  0003-handle-abi.md  0004-vulkan-loader.md  0005-platform-seam.md  0006-module-layout.md  0007-sim-rng.md  0008-shader-build.md  0009-error-handling.md  0010-asset-id-scheme.md  0011-server-authoritative-netcode.md  0012-vulkan-13-minimum-spec.md  README.md
docs/sessions/: 2026-06-11-m2.1-m2.2.md
engine/core/: CMakeLists.txt
engine/core/include/core/: array.h  assert.h  core.h  handle.h  hashmap.h  inline_array.h  mem.h  pool.h  str.h
engine/core/src/: core.cpp  core_assert.cpp
engine/core/src/mem/: arena.cpp
engine/math/: CMakeLists.txt
engine/math/include/math/: fix.h  fix_sintab.inc  math.h  math_types.h  rng.h
engine/math/src/: math.cpp
engine/platform/: CMakeLists.txt
engine/platform/include/platform/: platform.h  platform_input.h  platform_vulkan.h
engine/platform/src/: platform.cpp
engine/platform/src/win32/: win32_platform.cpp
engine/render/: CMakeLists.txt
engine/render/include/render/: pipeline_cache_check.h  render.h  renderer.h
engine/render/shaders/: quad.frag  quad.vert  triangle.frag  triangle.vert
engine/render/src/: pipeline_cache_check.cpp  render.cpp  renderer.cpp  renderer_null.cpp
engine/render/src/vk/: vk.cpp  vk.h
tests/: CMakeLists.txt  test.h  test_main.cpp
tests/containers/: container_tests.cpp
tests/det/: det_tests.cpp
tests/math/: math_tests.cpp
tests/mem/: mem_tests.cpp
tests/platform/: platform_tests.cpp
tests/render/: render_tests.cpp
tests/tga/: tga_tests.cpp
tools/hooks/: ctest-gate.bat  pre-push
tools/sandbox/: CMakeLists.txt
tools/sandbox/src/: main.cpp  tga_direct.cpp  tga_direct.h
tools/visualize/: CMakeLists.txt
tools/visualize/src/: main.cpp
